--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>2.1.4</version>
+  <version>2.1.7</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
@@ -23,6 +23,15 @@
     <jackson.version>2.3.3</jackson.version>
     <libScope>compile</libScope>
   </properties>
+
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>125</name>
+      <url>http://121.42.184.125:8081/nexus/content/repositories/snapshots/</url>
+      <layout>default</layout>
+    </repository>
+  </distributionManagement>
 
   <dependencies>
 
@@ -79,11 +88,6 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.1.2</version>
       <scope>${libScope}</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.mchange</groupId>
-      <artifactId>mchange-commons-java</artifactId>
-      <version>0.2.7</version>
     </dependency>
     <dependency>
       <groupId>org.mybatis</groupId>
