--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>2.1.7</version>
+  <version>2.1.10</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
@@ -26,9 +26,8 @@
 
   <distributionManagement>
     <repository>
-      <id>nexus</id>
-      <name>125</name>
-      <url>http://121.42.184.125:8081/nexus/content/repositories/snapshots/</url>
+      <id>releases</id>
+      <url>http://121.42.184.125:8081/nexus/content/repositories/releases/</url>
       <layout>default</layout>
     </repository>
   </distributionManagement>
