--- a/src/test/resources/META-INF/c3p0.properties
+++ b/src/test/resources/META-INF/c3p0.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-uf6p35133816a508sbo.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
-jdbc.username=colson
-jdbc.password=5tM6X8myh%t
+jdbc.url=jdbc:mysql://rm-uf6q9xhe30o6qgoae0o.mysql.rds.aliyuncs.com:1666/hds?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+jdbc.username=hds_dev
+jdbc.password=HDS123!@#
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=50
 jdbc.acquireIncrement=2
