--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>2.1.27</version>
+  <version>2.1.28</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
@@ -123,8 +123,13 @@
       <artifactId>commons-collections4</artifactId>
       <version>4.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <scope>${libScope}</scope>
+      <version>${jackson.version}</version>
+    </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
