1. 修复积分结果展示错误的问题

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>2.1.32</version>
+  <version>2.1.35</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
@@ -83,9 +83,9 @@
       <scope>${libScope}</scope>
     </dependency>
     <dependency>
-      <groupId>c3p0</groupId>
+      <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
-      <version>0.9.1.2</version>
+      <version>0.9.5.2</version>
       <scope>${libScope}</scope>
     </dependency>
     <dependency>
