--- a/src/test/resources/META-INF/c3p0.properties
+++ b/src/test/resources/META-INF/c3p0.properties
@@ -5,3 +5,10 @@ jdbc.password=HDS123!@#
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=50
 jdbc.acquireIncrement=2
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://rm-uf6p35133816a508sbo.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+#jdbc.username=colson
+#jdbc.password=5tM6X8myh%t
+#jdbc.minPoolSize=10
+#jdbc.maxPoolSize=50
+#jdbc.acquireIncrement=2
