--- a/src/main/resources/META-INF/c3p0.properties
+++ b/src/main/resources/META-INF/c3p0.properties
@@ -1,7 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-uf6p35133816a508sbo.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
-jdbc.username=colson
-jdbc.password=5tM6X8myh%t
+#jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala10.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala108o.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+jdbc.username=hdsroot
+jdbc.password=S040AqSyCp
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=50
 jdbc.acquireIncrement=2
