--- a/src/main/resources/META-INF/c3p0.properties
+++ b/src/main/resources/META-INF/c3p0.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala10.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
-jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala108o.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala10.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+#jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala108o.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
 jdbc.username=hdsroot
 jdbc.password=S040AqSyCp
 jdbc.minPoolSize=10
