--- a/src/test/resources/META-INF/c3p0.properties
+++ b/src/test/resources/META-INF/c3p0.properties
@@ -1,14 +1,10 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-uf6q9xhe30o6qgoae0o.mysql.rds.aliyuncs.com:1666/hds?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
-jdbc.username=hds_dev
-jdbc.password=HDS123!@#
+#jdbc.url=jdbc:mysql://rm-uf6q9xhe30o6qgoae0o.mysql.rds.aliyuncs.com:1666/hds?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+#jdbc.username=hds_dev
+#jdbc.password=HDS123!@#
+jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala108o.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+jdbc.username=hdsroot
+jdbc.password=S040AqSyCp
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=50
 jdbc.acquireIncrement=2
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://rm-uf6p35133816a508sbo.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
-#jdbc.username=colson
-#jdbc.password=5tM6X8myh%t
-#jdbc.minPoolSize=10
-#jdbc.maxPoolSize=50
-#jdbc.acquireIncrement=2
