--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>2.1.58-i</version>
+  <version>2.1.59-i</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
@@ -33,6 +33,10 @@
       <url>http://121.42.184.125:8081/nexus/content/repositories/releases/</url>
       <layout>default</layout>
     </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <url>http://121.42.184.125:8081/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
   </distributionManagement>
 
   <dependencies>
