--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>2.1.63-i</version>
+  <version>2.1.64-prod</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
