--- a/src/main/resources/META-INF/c3p0.properties
+++ b/src/main/resources/META-INF/c3p0.properties
@@ -1,5 +1,10 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
+# prod
 jdbc.url=jdbc:mysql://rm-uf626844v8uc11irp.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+# uat
+#jdbc.url=jdbc:mysql://106.14.173.153:7001/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
+# uat
+#jdbc.url=jdbc:mysql://rm-uf62h56e2nx2ala10.mysql.rds.aliyuncs.com:3306/hvmall?autoCommit=true&useUnicode=true&autoReconnect=true&characterEncoding=UTF-8
 jdbc.username=byyroot
 jdbc.password=v7&#5efr&777
 jdbc.minPoolSize=100
