--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -3,7 +3,8 @@ log4j.rootLogger=INFO, Appender1, Appender2
 log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
 log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
 log4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
-log4j.appender.Appender2=org.apache.log4j.FileAppender
-log4j.appender.Appender2.File=D:/Logs/SpringMVC.log
+log4j.appender.Appender2=org.apache.log4j.RollingFileAppender
+log4j.appender.Appender2.File=${user.home}/XQuark/logs/point.log
 log4j.appender.Appender2.layout=org.apache.log4j.PatternLayout
 log4j.appender.Appender2.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
+log4j.appender.Appender2.maxFileSize=100MB
