--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.1.9</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
