--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>3.3.9-asst</version>
+  <version>3.4.0</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
