--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,13 @@
 
   <distributionManagement>
     <repository>
-      <id>releases</id>
-      <url>http://121.42.184.125:8081/nexus/content/repositories/releases/</url>
+      <id>Releases</id>
+      <url>http://47.99.216.55:8081/repository/maven-public</url>
       <layout>default</layout>
     </repository>
     <snapshotRepository>
-      <id>snapshots</id>
-      <url>http://121.42.184.125:8081/nexus/content/repositories/snapshots/</url>
+      <id>Snapshots</id>
+      <url>http://47.99.216.55:8081/repository/maven-public</url>
     </snapshotRepository>
   </distributionManagement>
 
