--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <version>3.4.0</version>
+  <!--<version>3.4.0</version>-->
+  <version>1.0-SNAPSHOT</version>
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
