--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
       <version>1.5.4</version>
     </dependency>
     <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.9</version>
+    </dependency>
+    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.30</version>
@@ -164,7 +169,7 @@
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy</artifactId>
       <classifier>indy</classifier>
-      <version>2.5.3</version>
+      <version>2.4.12</version>
     </dependency>
   </dependencies>
   <build>
@@ -176,7 +181,7 @@
           <compilerId>groovy-eclipse-compiler</compilerId>
           <compilerArguments>
             <indy/><!-- optional; supported by batch 2.4.12-04+ -->
-            <configScript>config.groovy</configScript><!-- optional; supported by batch 2.4.13-02+ -->
+            <!--<configScript>config.groovy</configScript>&lt;!&ndash; optional; supported by batch 2.4.13-02+ &ndash;&gt;-->
           </compilerArguments>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
@@ -190,7 +195,7 @@
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.5.3-01</version>
+            <version>2.4.12-04</version>
           </dependency>
         </dependencies>
       </plugin>
