--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 
   <groupId>com.hds.xquark</groupId>
   <artifactId>xquark-point-core</artifactId>
-  <!--<version>3.4.0</version>-->
-  <version>1.0-SNAPSHOT</version>
+  <version>3.4.1</version>
+  <!--<version>1.0-SNAPSHOT</version>-->
 
   <name>xquark-point-core</name>
   <!-- FIXME change it to the project's website -->
@@ -43,12 +43,12 @@
   <distributionManagement>
     <repository>
       <id>Releases</id>
-      <url>http://47.99.216.55:8081/repository/maven-public</url>
+      <url>http://47.99.216.55:8081/repository/maven-releases</url>
       <layout>default</layout>
     </repository>
     <snapshotRepository>
       <id>Snapshots</id>
-      <url>http://47.99.216.55:8081/repository/maven-public</url>
+      <url>http://47.99.216.55:8081/repository/maven-snapshots</url>
     </snapshotRepository>
   </distributionManagement>
 
